# nanobind-practise

./: CMakeLists.txt  Makefile  README.md  pyproject.toml  stub_generator.py
src/: my_ext.cpp
