[project]
name = "my_ext"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "TakumiTsuruta", email = "ttsuruta@landscape.co.jp" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.rye]
managed = true
dev-dependencies = ["nanobind>=1.9.2", "pip>=24.0", "scikit-build-core>=0.8.2"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nanobind_example"]
